@@ -78,8 +78,8 @@ typedef struct avrftdi_s {
 	int pin_limit;
 	/* internal RX buffer of the device. needed for INOUT transfers */
 	int rx_buffer_size;
-	/* pin checklist. */
- struct pin_checklist_t pin_checklist[N_PINS];
+	/* use bitbanging instead of mpsse spi */
+	bool use_bitbanging;
 } avrftdi_t;
 
 void avrftdi_log(int level, const char * func, int line, const char * fmt, ...);
